fix(textfield): suffix and prefix spacing

--- a/tegel/src/components/textfield/textfield.scss
+++ b/tegel/src/components/textfield/textfield.scss
@@ -369,11 +369,15 @@
 .textfield-slot-wrap-suffix {
   align-self: center;
 
-  > * {
+  > span {
     font: var(--sdds-detail-02);
     letter-spacing: var(--sdds-detail-02-ls);
-    margin: 0 0 0 16px;
+    margin: 0 0 0 14px;
     color: var(--sdds-textfield-ps-color);
+
+    &::slotted(:not(sdds-icon)) {
+      margin: 0 0 0 2px;
+    }
   }
 
   &.textfield-error {
@@ -384,7 +388,11 @@
 }
 
 .textfield-slot-wrap-suffix {
-  > * {
-    margin: 0 16px 0 0;
+  > span {
+    margin: 0 14px 0 0;
+
+    &::slotted(:not(sdds-icon)) {
+      margin: 0 2px 0 0;
+    }
   }
 }
